[gd_scene load_steps=9 format=1]

[ext_resource path="res://levels/level_base.gd" type="Script" id=1]
[ext_resource path="res://backgrounds/stars_bg.png" type="Texture" id=2]
[ext_resource path="res://backgrounds/asteroids_bg.tex" type="Texture" id=3]
[ext_resource path="res://backgrounds/asteroids_bg2.tex" type="Texture" id=4]
[ext_resource path="res://backgrounds/clouds2.png" type="Texture" id=5]
[ext_resource path="res://entities/ship/ship.tscn" type="PackedScene" id=6]
[ext_resource path="res://hud.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/radio_stars_font.fnt" type="BitmapFont" id=8]

[node name="LevelBase" type="Node2D"]

script/script = ExtResource( 1 )
level_type = "shooter"
level_speed = 90.0
initial_pos = Vector2( 640, 360 )
initial_rot = 0.0

[node name="GameLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="GameLayer"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="Background0" type="ParallaxLayer" parent="GameLayer/ParallaxBackground"]

editor/display_folded = true
motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1280, 720 )

[node name="StarsSprite" type="Sprite" parent="GameLayer/ParallaxBackground/Background0"]

visibility/light_mask = 0
texture = ExtResource( 2 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1280, 720 )

[node name="Background1" type="ParallaxLayer" parent="GameLayer/ParallaxBackground"]

editor/display_folded = true
visibility/light_mask = 0
motion/scale = Vector2( 5, 0 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1280, 720 )

[node name="AsteroidsSprite" type="Sprite" parent="GameLayer/ParallaxBackground/Background1"]

visibility/light_mask = 0
texture = ExtResource( 3 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1280, 720 )

[node name="Background2" type="ParallaxLayer" parent="GameLayer/ParallaxBackground"]

editor/display_folded = true
visibility/light_mask = 0
motion/scale = Vector2( 5, 0 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1280, 720 )

[node name="AsteroidsSprite2" type="Sprite" parent="GameLayer/ParallaxBackground/Background2"]

visibility/light_mask = 0
texture = ExtResource( 4 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1280, 720 )

[node name="Background3" type="ParallaxLayer" parent="GameLayer/ParallaxBackground"]

editor/display_folded = true
motion/scale = Vector2( 2, 2 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1280, 720 )

[node name="CloudsSprite" type="Sprite" parent="GameLayer/ParallaxBackground/Background3"]

visibility/opacity = 0.69
visibility/light_mask = 8
texture = ExtResource( 5 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1280, 720 )

[node name="ShipArea2D" parent="GameLayer" instance=ExtResource( 6 )]

transform/pos = Vector2( 1521.74, 384.607 )

[node name="HUD" parent="." instance=ExtResource( 7 )]

layer = 2

[node name="LevelCountdown" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimeBonusLayer" type="CanvasLayer" parent="."]

layer = 4
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="TimeBonusTitle" type="Label" parent="TimeBonusLayer"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 3.0
margin/top = 258.0
margin/right = 1280.0
margin/bottom = 302.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.917969, 0.355276, 0.0502014, 1 )
custom_colors/font_color_shadow = Color( 0.804688, 0.711862, 0.210602, 1 )
text = "TIME BONUS"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TimeBonusLabel" type="Label" parent="TimeBonusLayer"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 3.0
margin/top = 307.0
margin/right = 1280.0
margin/bottom = 351.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.917969, 0.355276, 0.0502014, 1 )
custom_colors/font_color_shadow = Color( 0.804688, 0.711862, 0.210602, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TimeBonusTimer" type="Timer" parent="TimeBonusLayer"]

process_mode = 1
wait_time = 0.07
one_shot = false
autostart = false

[connection signal="timeout" from="LevelCountdown" to="." method="_on_LevelCountdown_timeout"]

[connection signal="timeout" from="TimeBonusLayer/TimeBonusTimer" to="." method="_on_TimeBonusTimer_timeout"]


